# FUSoft-Spine-Planner

./: .gitignore  README.md  TransWhandleLeft.stl  pyproject.toml
code/CT_segmentation/: preprocess_lamina.py  seg_nrrd_utils.py  train_nunnet.py
code/Lamina_segmentation/: segmenta_lamina.py
code/Lamina_segmentation/CT_segmentation/: preprocess_lamina_ct.py  run_inference_ct.py
code/Lamina_segmentation/MRI_segmentation/: run_inference_mri.py
code/MRI_segmentation/: nunnet_train_mri.py  preprocess_mri  preprocess_mri.py
code/Pseudo_CTS/: requirements.txt
code/Pseudo_CTS/evaluation/: metrics.py
code/Pseudo_CTS/inference/: predict_hanliu  predict_stinity.py
code/Pseudo_CTS/scripts/: run_evaluation.py
code/SynCT_TcMRgFUS/src/: requirements.txt
code/Trajectories/: optimization.py
code/coregistration/: Co-registre.py  Coregistration(pyqt6).py
code/dataset/: avaluator.py  creation_patches.py  data_augmentation.py  patches_visualization.py  spine_trainer.py
code/segmentation/: preprocess_lamina.py  run_inference.py  run_interference.py  seg_nrrd_utils.py  train_nunnet.py
code/segmentation/Dataset001_Lamina/: dataset.json
code/stinity_mr-to-pct/: README.md  sitiny_avaluador_pct.py
code/stinity_mr-to-pct/utils/: infer_funcs.py
