[project]
name = "fusoft-spine-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "antspyx>=0.6.3",
    "dipy>=1.11.0",
    "matplotlib>=3.10.8",
    "monai>=1.5.2",
    "scikit-image>=0.25.2",
    "simpleitk>=2.5.3",
    "torch>=2.11.0",
    "torchio>=1.0.2",
    "torchvision>=0.26.0",
]
